; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/infinity60/extr_led_controller.c_set_led_bit.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/infinity60/extr_led_controller.c_set_led_bit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IS31_FUNCTIONREG = common dso_local global i32 0, align 4
@IS31_REG_SHUTDOWN = common dso_local global i32 0, align 4
@IS31_REG_SHUTDOWN_ON = common dso_local global i32 0, align 4
@IS31_REG_SHUTDOWN_OFF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_led_bit(i32 %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %14 = load i32, i32* %7, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %23, label %16

16:                                               ; preds = %4
  %17 = load i32, i32* %7, align 4
  %18 = icmp sgt i32 %17, 87
  br i1 %18, label %23, label %19

19:                                               ; preds = %16
  %20 = load i32, i32* %7, align 4
  %21 = srem i32 %20, 10
  %22 = icmp sgt i32 %21, 8
  br i1 %22, label %23, label %24

23:                                               ; preds = %19, %16, %4
  br label %81

24:                                               ; preds = %19
  %25 = load i32, i32* %8, align 4
  %26 = ashr i32 %25, 2
  store i32 %26, i32* %13, align 4
  %27 = load i32, i32* %8, align 4
  %28 = and i32 %27, -5
  store i32 %28, i32* %8, align 4
  %29 = load i32, i32* %7, align 4
  %30 = sdiv i32 %29, 10
  %31 = srem i32 %30, 10
  %32 = sub nsw i32 %31, 1
  %33 = mul nsw i32 %32, 2
  store i32 %33, i32* %9, align 4
  %34 = load i32, i32* %13, align 4
  %35 = icmp eq i32 %34, 1
  %36 = zext i1 %35 to i64
  %37 = select i1 %35, i32 18, i32 0
  %38 = load i32, i32* %9, align 4
  %39 = add nsw i32 %38, %37
  store i32 %39, i32* %9, align 4
  %40 = load i32, i32* @IS31_FUNCTIONREG, align 4
  %41 = load i32, i32* @IS31_REG_SHUTDOWN, align 4
  %42 = load i32, i32* @IS31_REG_SHUTDOWN_ON, align 4
  %43 = call i32 @is31_write_register(i32 %40, i32 %41, i32 %42)
  %44 = call i32 @chThdSleepMilliseconds(i32 5)
  %45 = load i32, i32* %5, align 4
  %46 = load i32, i32* %9, align 4
  %47 = call i32 @is31_read_register(i32 %45, i32 %46, i32* %12)
  %48 = load i32, i32* @IS31_FUNCTIONREG, align 4
  %49 = load i32, i32* @IS31_REG_SHUTDOWN, align 4
  %50 = load i32, i32* @IS31_REG_SHUTDOWN_OFF, align 4
  %51 = call i32 @is31_write_register(i32 %48, i32 %49, i32 %50)
  %52 = load i32, i32* %7, align 4
  %53 = srem i32 %52, 10
  %54 = sub nsw i32 %53, 1
  %55 = shl i32 1, %54
  store i32 %55, i32* %10, align 4
  %56 = load i32, i32* %12, align 4
  store i32 %56, i32* %11, align 4
  %57 = load i32, i32* %8, align 4
  switch i32 %57, label %71 [
    i32 0, label %58
    i32 1, label %63
    i32 2, label %67
  ]

58:                                               ; preds = %24
  %59 = load i32, i32* %10, align 4
  %60 = xor i32 %59, -1
  %61 = load i32, i32* %11, align 4
  %62 = and i32 %61, %60
  store i32 %62, i32* %11, align 4
  br label %71

63:                                               ; preds = %24
  %64 = load i32, i32* %10, align 4
  %65 = load i32, i32* %11, align 4
  %66 = or i32 %65, %64
  store i32 %66, i32* %11, align 4
  br label %71

67:                                               ; preds = %24
  %68 = load i32, i32* %10, align 4
  %69 = load i32, i32* %11, align 4
  %70 = xor i32 %69, %68
  store i32 %70, i32* %11, align 4
  br label %71

71:                                               ; preds = %24, %67, %63, %58
  %72 = load i32, i32* %9, align 4
  %73 = load i32*, i32** %6, align 8
  %74 = getelementptr inbounds i32, i32* %73, i64 0
  store i32 %72, i32* %74, align 4
  %75 = load i32, i32* %11, align 4
  %76 = load i32*, i32** %6, align 8
  %77 = getelementptr inbounds i32, i32* %76, i64 1
  store i32 %75, i32* %77, align 4
  %78 = load i32, i32* %5, align 4
  %79 = load i32*, i32** %6, align 8
  %80 = call i32 @is31_write_data(i32 %78, i32* %79, i32 2)
  br label %81

81:                                               ; preds = %71, %23
  ret void
}

declare dso_local i32 @is31_write_register(i32, i32, i32) #1

declare dso_local i32 @chThdSleepMilliseconds(i32) #1

declare dso_local i32 @is31_read_register(i32, i32, i32*) #1

declare dso_local i32 @is31_write_data(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
